# tanuki

./: .env  .gitignore  .platform.app.yaml  Dockerfile  LICENSE
.platform/: routes.yaml  (+2 more)
tanuki-backend/: .env  .env.local  .gitignore  Cargo.toml  local.env  prod.env  readme.md
tanuki-backend/migrations/2023-12-03-172935_create_tanuki/: down.sql
tanuki-backend/migrations/2024-03-01-072543_init_tanuki/: down.sql  up.sql
tanuki-backend/migrations/2024-03-09-143228_create-userdata-tables/: down.sql  up.sql
tanuki-backend/migrations/2024-03-10-052854_create-food-tables/: down.sql  up.sql
tanuki-backend/migrations/2024-03-10-063404_create-dishes-tables/: down.sql  up.sql
tanuki-backend/migrations/2024-03-10-065111_create-history-tables/: down.sql  up.sql
tanuki-backend/migrations/2024-03-10-201330_populate-mock-data/: down.sql  up.sql
tanuki-backend/migrations/2024-03-16-041204_insert-history_entries_bridge/: down.sql  up.sql
tanuki-backend/settings/: base.yaml  prod.yaml
tanuki-backend/src/: main.rs  schema.rs
tanuki-backend/src/errors/: info.rs  mod.rs  reg_errors.rs
tanuki-backend/src/handlers/: mod.rs
tanuki-backend/src/handlers/auth/: _routes.rs  login.rs  logout.rs  mod.rs  refresh.rs  register.rs
tanuki-backend/src/handlers/dishes/: get_dish.rs  update_dish.rs
tanuki-backend/src/handlers/history/: mod.rs
tanuki-backend/src/handlers/measurements/: mod.rs  update_measurement.rs
tanuki-backend/src/handlers/tags/: _routes.rs  create_tags.rs  update_tags.rs
tanuki-backend/src/handlers/users/: _routes.rs  create_user.rs  get_user.rs
tanuki-backend/src/routes/: mod.rs
tanuki-backend/src/routes/auth/: _routes.rs  login.rs  logout.rs  mod.rs  refresh.rs  register.rs  verify_email.rs
tanuki-backend/src/routes/categories/: _routes.rs  get_categories.rs  get_category.rs  mod.rs  search_category.rs
tanuki-backend/src/routes/food/: _routes.rs  add_food.rs  get_food.rs  mod.rs  search_food.rs
tanuki-backend/src/routes/health/: _routes.rs  heartbeat.rs  mod.rs
tanuki-backend/src/routes/history/: _routes.rs  get_history.rs  get_history_entry.rs  mod.rs
tanuki-backend/src/routes/users/: _routes.rs  get_user.rs  mod.rs
tanuki-backend/src/service/: data_providers.rs  env.rs  in_deploy_migrations.rs  middlewares.rs  mod.rs  redis_connection_hack.rs  settings.rs  telemetry.rs
tanuki-backend/src/templates/: verification_email.html
tanuki-backend/src/types/: general.rs  mod.rs  tokens.rs
tanuki-backend/src/types/auth/: mod.rs  users.rs
tanuki-backend/src/types/categories/: category.rs  mod.rs
tanuki-backend/src/types/food/: food_entry.rs  mod.rs
tanuki-backend/src/types/history/: history_entry.rs  mod.rs
tanuki-backend/src/utils/: acquire_pg_connection.rs  emails.rs  mod.rs  session_user_id.rs
tanuki-backend/src/utils/auth/: mod.rs  password.rs
tanuki-backend/src/utils/auth/tokens/: issue_confirmation_token_paseto.rs  mod.rs  utils.rs  verify_confirmation_token_paseto.rs
tanuki-backend/src/utils/auth/transactions/: create_user.rs
(+365 files in other folders)
