[package]
name = "tanuki"
version = "0.1.0"
edition = "2021"

[[bin]]
edition = "2021"
name = "tanuki"
path = "src/main.rs"

[dependencies]
actix-web = "4.4.0"
actix-service = "2.0.2"
actix-rt = "2.9.0"
actix-redis = "0.13.0"
actix-cors = "0.6.4"
actix-governor = "0.5.0"
actix = "0.13.1"
awc = { version = "3.2.0", features = ["openssl"] }
tokio = { version = "1.34.0", features = ["full"] }
diesel = { version = "2.1.4", features = [
  "postgres",
  "r2d2",
  "chrono",
  "uuid",
  "serde_json",
] }
diesel-async = { version = "0.4.1", features = ["postgres", "deadpool"] }
deadpool-postgres = "0.11.0"
diesel_migrations = "2.1.0"
serde = { version = "1.0.193", features = ["serde_derive"] }
serde_with = "3.4.0"
env_logger = "0.10.1"
uuid = { version = "1.6.1", features = [
  "v4",
  "fast-rng",
  "serde",
  "macro-diagnostics",
] }
chrono = { version = "0.4.31", features = ["serde"] }
url = "2.5.0"
log = { version = "0.4.20", features = ["std", "serde"] }
dotenvy = "0.15.7"
r2d2 = "0.8.10"
r2d2_redis = "0.14.0"
serde_derive = "1.0.193"
serde_json = "1.0.108"
serde_json_path = "0.6.4"
base64 = "0.21.5"
actix-session = "0.8.0"
redis = { version = "0.20.2", features = ["tls"] }
