[package]
name = "tanuki"
version = "0.1.0"
authors = ["Alena Dzhukich <github@alena.red>"]
edition = "2021"

# [lib]
# path = "src/lib.rs"

[[bin]]
edition = "2021"
name = "tanuki"
path = "src/main.rs"

[dependencies]
actix-web = "4.4.0"
actix-service = "2.0.2"
actix-rt = "2.9.0"
actix-redis = "0.13.0"
actix-cors = "0.6.4"
actix-governor = "0.5.0"
actix = "0.13.1"
awc = { version = "3.2.0", features = ["openssl"] }
tokio = { version = "1.34.0", features = ["full"] }
diesel = { version = "2.1.4", features = [
  "postgres",
  "r2d2",
  "chrono",
  "uuid",
  "serde_json",
] }
diesel-async = { version = "0.4.1", features = ["postgres", "deadpool"] }
deadpool-postgres = "0.11.0"
diesel_migrations = "2.1.0"
serde = { version = "1.0.193", features = ["serde_derive"] }
serde_with = "3.4.0"
env_logger = "0.10.1"
uuid = { version = "1.6.1", features = [
  "v4",
  "fast-rng",
  "serde",
  "macro-diagnostics",
] }
chrono = { version = "0.4.31", features = ["serde"] }
url = "2.5.0"
log = { version = "0.4.20", features = ["std", "serde"] }
dotenvy = "0.15.7"
r2d2 = "0.8.10"
r2d2_redis = "0.14.0"
serde_derive = "1.0.193"
serde_json = { version = "1.0.108", features = ["raw_value"] }
serde_json_path = "0.6.4"
base64 = "0.21.5"
actix-session = "0.8.0"
redis = { version = "0.20.2", features = ["tls"] }
tracing = "0.1.40"
tracing-subscriber = { version = "0.3.18", features = [
  "fmt",
  "std",
  "env-filter",
  "registry",
  'json',
  'tracing-log',
] }
config = { version = "0.14.0", features = ["yaml"] }
pasetors = "0.6.8"
once_cell = "1.19.0"
hex = "0.4.3"
argon2 = "0.5.3"
lettre = { version = "0.11.4", features = ["builder", "tokio1-native-tls"] }
minijinja = "1.0.12"
